fix bug
use process builder instead of process to handle the problem of
readline() hanging.